Fix session management bugs and exec issue
